--- a/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
@@ -1,44 +1,15 @@
 {
     "problem_data"                     : {
         "problem_name"    : "3D_sphere_remeshed_channel_test",
-        "model_part_name" : "MainModelPart",
-        "problem_type"    : "fluid",
-        "solve_problem"   : true,
-        "domain_size"     : 3,
+        "model_part_name" : "FluidModelPart",
         "parallel_type"   : "OpenMP",
         "echo_level"      : 0,
         "start_time"      : 0.0,
-        "end_time"        : 1.2,
-        "time_step"       : 0.01
-    },
-    "output_configuration"             : {
-        "result_file_configuration" : {
-            "gidpost_flags"       : {
-                "GiDPostMode"           : "GiD_PostBinary",
-                "WriteDeformedMeshFlag" : "WriteDeformed",
-                "WriteConditionsFlag"   : "WriteConditions",
-                "MultiFileFlag"         : "MultipleFiles"
-            },
-            "file_label"          : "step",
-            "output_control_type" : "step",
-            "output_frequency"    : 1.0,
-            "body_output"         : true,
-            "node_output"         : false,
-            "skin_output"         : false,
-            "plane_output"        : [],
-            "nodal_results"       : ["VELOCITY","PRESSURE","NODAL_H"],
-            "nodal_nonhistorical_results" : [],
-            "gauss_point_results" : []
-        },
-        "point_data_configuration"  : []
-    },
-    "restart_options"                  : {
-        "SaveRestart"      : "False",
-        "RestartFrequency" : 0,
-        "LoadRestart"      : "False",
-        "Restart_Step"     : 0
+        "end_time"        : 1.2
     },
     "solver_settings"                  : {
+        "model_part_name"              : "FluidModelPart",
+        "domain_size"                  : 3,
         "solver_type"                  : "FractionalStep",
         "model_import_settings"        : {
             "input_type"     : "mdpa",
@@ -48,7 +19,6 @@
         "compute_reactions"            : false,
         "reform_dofs_at_each_step"     : false,
         "time_order"                   : 2,
-        "divergence_clearance_steps"   : 0,
         "dynamic_tau"                  : 0.001,
         "predictor_corrector"          : false,
         "maximum_velocity_iterations"  : 4,
@@ -57,96 +27,144 @@
         "pressure_tolerance"           : 0.001,
         "volume_model_part_name"       : "Parts_Parts_Auto1",
         "skin_parts"                   : ["AutomaticInlet3D_Automatic_inlet_velocity_Auto1","Outlet3D_Outlet_pressure_Auto1","NoSlip3D_No_Slip_Auto1","NoSlip3D_No_Slip_Auto2"],
-        "no_skin_parts"                : []
+        "no_skin_parts"                : [],
+        "time_stepping"                : {
+            "automatic_time_step" : false,
+            "time_step"           : 0.01
+        }
     },
-    "initial_conditions_process_list"  : [],
-    "boundary_conditions_process_list" : [{
-        "python_module" : "assign_vector_by_direction_process",
-        "kratos_module" : "KratosMultiphysics",
-        "help"          : [],
-        "process_name"  : "AssignVectorByDirectionProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "AutomaticInlet3D_Automatic_inlet_velocity_Auto1",
-            "variable_name"   : "VELOCITY",
-            "modulus"         : 1.0,
-            "direction"       : "automatic_inwards_normal",
-            "interval"        : [0.0,"End"]
+    "processes" : {
+        "initial_conditions_process_list"  : [],
+        "boundary_conditions_process_list" : [{
+            "python_module" : "assign_vector_by_direction_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : [],
+            "process_name"  : "AssignVectorByDirectionProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "FluidModelPart.AutomaticInlet3D_Automatic_inlet_velocity_Auto1",
+                "variable_name"   : "VELOCITY",
+                "modulus"         : 1.0,
+                "direction"       : "automatic_inwards_normal",
+                "interval"        : [0.0,"End"]
+            }
+        },{
+            "python_module" : "assign_scalar_variable_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : "This process fixes the selected components of a given vector variable",
+            "process_name"  : "AssignScalarVariableProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "FluidModelPart.Outlet3D_Outlet_pressure_Auto1",
+                "variable_name"   : "PRESSURE",
+                "constrained"     : true,
+                "value"           : 0.0
+            }
+        },{
+            "python_module" : "apply_noslip_process",
+            "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
+            "process_name"  : "ApplyNoSlipProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "FluidModelPart.NoSlip3D_No_Slip_Auto1"
+            }
+        },{
+            "python_module" : "apply_noslip_process",
+            "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
+            "process_name"  : "ApplyNoSlipProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "FluidModelPart.NoSlip3D_No_Slip_Auto2"
+            }
+        }],
+        "auxiliar_process_list"            : [],
+        "recursive_remeshing_process" :[
+        {
+            "python_module"   : "mmg_process",
+            "kratos_module"   : "KratosMultiphysics.MeshingApplication",
+            "help"                  : "This process automatically remesh using MMG library",
+            "process_name"          : "MmgProcess",
+            "Parameters"            : {
+                "model_part_name"                  : "FluidModelPart",
+                "strategy"                         : "Hessian",
+                "hessian_strategy_parameters"              :{
+                    "metric_variable"                  : ["VELOCITY"],
+                    "interpolation_error"              : 0.004
+                },
+                "automatic_remesh"                 : true,
+                "automatic_remesh_parameters"      :{
+                    "automatic_remesh_type"            : "Ratio",
+                    "min_size_ratio"                   : 0.10,
+                    "max_size_ratio"                   : 100.0,
+                    "refer_type"                       : "Mean"
+                },
+                "initial_remeshing"                : false,
+                "step_frequency"                   : 20,
+                "enforce_current"                   : false,
+                "save_external_files"               : false,
+                "anisotropy_remeshing"              : true,
+                "anisotropy_parameters":{
+                    "hmin_over_hmax_anisotropic_ratio" : 0.1,
+                    "boundary_layer_max_distance"      : 1.0,
+                    "boundary_layer_min_size_ratio"    : 1.0,
+                    "interpolation"                    : "Linear"
+                },
+                "echo_level"                        : 3
+            }
         }
-    },{
-        "python_module" : "assign_scalar_variable_process",
-        "kratos_module" : "KratosMultiphysics",
-        "help"          : "This process fixes the selected components of a given vector variable",
-        "process_name"  : "AssignScalarVariableProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "Outlet3D_Outlet_pressure_Auto1",
-            "variable_name"   : "PRESSURE",
-            "constrained"     : true,
-            "value"           : 0.0
-        }
-    },{
-        "python_module" : "apply_noslip_process",
-        "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
-        "process_name"  : "ApplyNoSlipProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "NoSlip3D_No_Slip_Auto1"
-        }
-    },{
-        "python_module" : "apply_noslip_process",
-        "kratos_module" : "KratosMultiphysics.FluidDynamicsApplication",
-        "process_name"  : "ApplyNoSlipProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "NoSlip3D_No_Slip_Auto2"
-        }
-    }],
-    "gravity"                          : [{
-        "python_module" : "process_factory",
-        "kratos_module" : "KratosMultiphysics",
-        "process_name"  : "ApplyConstantVectorValueProcess",
-        "Parameters"    : {
-            "mesh_id"         : 0,
-            "model_part_name" : "Parts_Parts_Auto1",
-            "variable_name"   : "BODY_FORCE",
-            "modulus"         : 0.0,
-            "direction"       : [0.0,-1.0,0.0]
-        }
-    }],
-    "auxiliar_process_list"            : [],
-    "recursive_remeshing_process" :[
-    {
-        "python_module"   : "mmg_process",
-        "kratos_module"   : "KratosMultiphysics.MeshingApplication",
-        "help"                  : "This process automatically remesh using MMG library",
-        "process_name"          : "MmgProcess",
-        "Parameters"            : {
-            "strategy"                         : "Hessian",
-            "hessian_strategy_parameters"              :{
-                "metric_variable"                  : ["VELOCITY"],
-                "interpolation_error"              : 0.004
-            },
-            "automatic_remesh"                 : true,
-            "automatic_remesh_parameters"      :{
-                "automatic_remesh_type"            : "Ratio",
-                "min_size_ratio"                   : 0.10,
-                "max_size_ratio"                   : 100.0,
-                "refer_type"                       : "Mean"
-            },
-            "initial_remeshing"                : false,
-            "step_frequency"                   : 20,
-            "enforce_current"                   : false,
-            "save_external_files"               : false,
-            "anisotropy_remeshing"              : true,
-            "anisotropy_parameters":{
-                "hmin_over_hmax_anisotropic_ratio" : 0.1,
-                "boundary_layer_max_distance"      : 1.0,
-                "boundary_layer_min_size_ratio"    : 1.0,
-                "interpolation"                    : "Linear"
-            },
-            "echo_level"                        : 3
-        }
+        ]
+    },
+    "output_processes" : {
+        "gid_output" : [{
+            "python_module" : "gid_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "GiDOutputProcess",
+            "help"          : "This process writes postprocessing files for GiD",
+            "Parameters"    : {
+                "model_part_name"        : "FluidModelPart.",
+                "output_name"            : "fluid",
+                "postprocess_parameters" : {
+                    "result_file_configuration" : {
+                        "gidpost_flags"       : {
+                            "GiDPostMode"           : "GiD_PostBinary",
+                            "WriteDeformedMeshFlag" : "WriteDeformed",
+                            "WriteConditionsFlag"   : "WriteConditions",
+                            "MultiFileFlag"         : "SingleFile"
+                        },
+                        "file_label"          : "time",
+                        "output_control_type" : "step",
+                        "output_frequency"    : 1,
+                        "body_output"         : true,
+                        "node_output"         : false,
+                        "skin_output"         : false,
+                        "plane_output"        : [],
+                        "nodal_results"       : ["VELOCITY","PRESSURE"],
+                        "nodal_nonhistorical_results" : ["NODAL_H"],
+                        "gauss_point_results" : []
+                    },
+                    "point_data_configuration"  : []
+                }
+            }
+        }],
+        "vtk_output" : [{
+            "python_module" : "vtk_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "VtkOutputProcess",
+            "help"          : "This process writes postprocessing files for Paraview",
+            "Parameters"    : {
+                "model_part_name"                    : "FluidModelPart.",
+                "output_control_type"                : "step",
+                "output_frequency"                   : 1,
+                "file_format"                        : "ascii",
+                "output_precision"                   : 7,
+                "output_sub_model_parts"             : true,
+                "folder_name"                        : "vtk_output",
+                "save_output_files_in_folder"        : true,
+                "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE"],
+                "nodal_data_value_variables"         : ["NODAL_H"],
+                "element_data_value_variables"       : [],
+                "condition_data_value_variables"     : []
+            }
+        }]
     }
-    ]
 }
