--- a/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
@@ -4,7 +4,7 @@
         "parallel_type"   : "OpenMP",
         "start_time"      : 0.0,
         "end_time"        : 1.0,
-        "echo_level"      : 0
+        "echo_level"      : 1
     },
     "solver_settings"          : {
         "model_part_name"                    : "Structure",
@@ -27,7 +27,14 @@
             "mortar_type"                    : "ALMContactFrictionless"
         },
         "convergence_criterion"              : "adaptative_remesh_criteria",
-        "max_iteration"                      : 2,
+        "compute_error_settings" : {
+            "error_mesh_tolerance" : 2.0e-3
+        },
+        "remeshing_parameters":
+        {
+            "echo_level"           : 0
+        },
+        "max_iteration"                      : 10,
         "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1","Parts_Parts_Auto2"],
         "processes_sub_model_part_list"      : ["Contact_Part","Parts_Parts_Auto1","Parts_Parts_Auto2","DISPLACEMENT_Displacement_Auto1","IMPOSE_DISP_Auto1"]
     },
@@ -102,7 +109,8 @@
                         "plane_output"        : [],
                         "nodal_results"       : ["DISPLACEMENT","REACTION","WEIGHTED_GAP"],
                         "nodal_nonhistorical_results": ["NORMAL","NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
-                        "nodal_flags_results": ["ACTIVE","SLAVE"]
+                        "nodal_flags_results": ["ACTIVE","SLAVE"],
+                        "gauss_point_results" : ["ERROR_INTEGRATION_POINT"]
                     },
                     "point_data_configuration"  : []
                 }
@@ -126,7 +134,7 @@
                 "nodal_data_value_variables"         : ["NORMAL","NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
-                "gauss_point_variables"              : []
+                "gauss_point_variables"              : ["ERROR_INTEGRATION_POINT"]
             }
         }]
     }
