--- a/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contact_spr/source/ProjectParameters.json
@@ -107,9 +107,9 @@
                         "node_output"         : false,
                         "skin_output"         : false,
                         "plane_output"        : [],
-                        "nodal_results"       : ["DISPLACEMENT","REACTION","WEIGHTED_GAP"],
-                        "nodal_nonhistorical_results": ["NORMAL","NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
-                        "nodal_flags_results": ["ACTIVE","SLAVE"],
+                        "nodal_results"       : ["DISPLACEMENT","REACTION","WEIGHTED_GAP","NORMAL"],
+                        "nodal_nonhistorical_results": ["NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
+                        "nodal_flags_results": ["ACTIVE","SLAVE","CONTACT"],
                         "gauss_point_results" : ["ERROR_INTEGRATION_POINT"]
                     },
                     "point_data_configuration"  : []
@@ -130,8 +130,9 @@
                 "output_sub_model_parts"             : false,
                 "folder_name"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
-                "nodal_solution_step_data_variables" : ["DISPLACEMENT","REACTION","WEIGHTED_GAP"],
-                "nodal_data_value_variables"         : ["NORMAL","NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
+                "nodal_solution_step_data_variables" : ["DISPLACEMENT","REACTION","WEIGHTED_GAP","NORMAL"],
+                "nodal_data_value_variables"         : ["NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE","CONTACT_PRESSURE"],
+                "nodal_flags"                        : ["ACTIVE","SLAVE","MASTER","CONTACT"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
                 "gauss_point_variables"              : ["ERROR_INTEGRATION_POINT"]
