--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
@@ -94,7 +94,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "step",
-                        "output_frequency"    : 1,
+                        "output_frequency"    : 20,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -116,8 +116,8 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure.computing_domain",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
-                "file_format"                        : "binary",
+                "output_frequency"                   : 20,
+                "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
                 "folder_name"                        : "vtk_output",
