--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_2/ProjectParameters.json
@@ -4,7 +4,7 @@
         "parallel_type" : "OpenMP",
         "echo_level"    : 0,
         "start_time"    : 0.0,
-        "end_time"      : 1.5
+        "end_time"      : 2.5
     },
     "solver_settings"  : {
         "solver_type"                        : "Static",
@@ -95,7 +95,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "step",
-                        "output_frequency"    : 1,
+                        "output_frequency"    : 20,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -117,8 +117,8 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure.computing_domain",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
-                "file_format"                        : "binary",
+                "output_frequency"                   : 20,
+                "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
                 "folder_name"                        : "vtk_output",
