--- a/mmg_remeshing_examples/use_cases/beam_spr/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam_spr/source/ProjectParameters.json
@@ -22,16 +22,12 @@
         "material_import_settings"           : {
             "materials_filename" : "StructuralMaterials.json"
         },
-        "line_search"                        : false,
         "convergence_criterion"              : "adaptative_remesh_criteria",
         "displacement_relative_tolerance"    : 0.0001,
         "displacement_absolute_tolerance"    : 1e-9,
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
-        "max_iteration"                      : 10,
-        "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1"],
-        "processes_sub_model_part_list"      : ["DISPLACEMENT_Displacement_Auto1","SelfWeight2D_Self_weight_Auto1"],
-        "rotation_dofs"                      : false
+        "max_iteration"                      : 10
     },
     "processes" : {
         "constraints_process_list" : [{
