--- a/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
@@ -94,21 +94,14 @@
                 "automatic_remesh"                 : true,
                 "automatic_remesh_parameters"      :{
                     "automatic_remesh_type"            : "Ratio",
-                    "min_size_ratio"                   : 0.10,
-                    "max_size_ratio"                   : 100.0,
+                    "min_size_ratio"                   : 0.2,
+                    "max_size_ratio"                   : 10.0,
                     "refer_type"                       : "Mean"
                 },
-                "initial_remeshing"                : false,
-                "step_frequency"                   : 20,
+                "initial_remeshing"                 : false,
+                "step_frequency"                    : 20,
                 "enforce_current"                   : false,
                 "save_external_files"               : false,
-                "anisotropy_remeshing"              : true,
-                "anisotropy_parameters":{
-                    "hmin_over_hmax_anisotropic_ratio" : 0.1,
-                    "boundary_layer_max_distance"      : 1.0,
-                    "boundary_layer_min_size_ratio"    : 1.0,
-                    "interpolation"                    : "Linear"
-                },
                 "echo_level"                        : 3
             }
         }
@@ -129,7 +122,7 @@
                             "GiDPostMode"           : "GiD_PostBinary",
                             "WriteDeformedMeshFlag" : "WriteDeformed",
                             "WriteConditionsFlag"   : "WriteConditions",
-                            "MultiFileFlag"         : "SingleFile"
+                            "MultiFileFlag"         : "MultipleFiles"
                         },
                         "file_label"          : "time",
                         "output_control_type" : "step",
@@ -157,7 +150,7 @@
                 "output_frequency"                   : 1,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
-                "output_sub_model_parts"             : true,
+                "output_sub_model_parts"             : false,
                 "folder_name"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE"],
