--- a/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/hertz_hessian/source/ProjectParameters.json
@@ -91,15 +91,15 @@
             "Parameters"            : {
                 "model_part_name"                  : "Structure",
                 "discretization_type"              : "Standard",
-                "consider_strain_energy"           : false,
+                "consider_strain_energy"           : true,
                 "hessian_strategy_parameters"              :{
                     "interpolation_error"              : 0.1
                 },
                 "automatic_remesh"                 : true,
                 "automatic_remesh_parameters"      :{
                     "automatic_remesh_type"            : "Ratio",
-                    "min_size_ratio"                   : 0.2,
-                    "max_size_ratio"                   : 2.0,
+                    "min_size_ratio"                   : 0.25,
+                    "max_size_ratio"                   : 1.2,
                     "refer_type"                       : "Mean"
                 },
                 "save_external_files"              : false,
@@ -138,7 +138,7 @@
                         "plane_output"        : [],
                         "nodal_results"       : ["DISPLACEMENT","NORMAL","REACTION","VECTOR_LAGRANGE_MULTIPLIER","WEIGHTED_GAP"],
                         "nodal_nonhistorical_results": ["AUGMENTED_NORMAL_CONTACT_PRESSURE"],
-                        "nodal_flags_results": ["ACTIVE","SLAVE"],
+                        "nodal_flags_results": ["ACTIVE","SLAVE","INTERFACE"],
                         "gauss_point_results" : ["VON_MISES_STRESS","STRAIN_ENERGY"]
                     },
                     "point_data_configuration"  : []
@@ -161,7 +161,7 @@
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","NORMAL","REACTION","VECTOR_LAGRANGE_MULTIPLIER","WEIGHTED_GAP"],
                 "nodal_data_value_variables"         : ["AUGMENTED_NORMAL_CONTACT_PRESSURE"],
-                "condition_flags"                    : ["ACTIVE","SLAVE"],
+                "condition_flags"                    : ["ACTIVE","SLAVE","INTERFACE"],
                 "element_data_value_variables"       : [],
                 "condition_data_value_variables"     : [],
                 "gauss_point_variables"              : ["VON_MISES_STRESS","STRAIN_ENERGY"]
